@@ -1,7 +1,7 @@
 ==========================
  dataflake.ldapconnection
 ==========================
-This package provides an abstraction layer on top of python-ldap. It
+This package provides an abstraction layer on top of ``pyldap``. It
 offers a connection object with simplified methods for inserting, 
 modifying, searching and deleting records in the LDAP directory tree.
 Failover/redundancy can be achieved by supplying connection data for 
