@@ -3,4 +3,8 @@
 Interfaces
 ----------
 
+.. note:: On 
+  `ReadTheDocs <http://http://dataflakeldapconnection.readthedocs.io>`_
+  this page will not work correctly.
+
 .. autointerface:: dataflake.ldapconnection.interfaces.ILDAPConnection
