@@ -3,6 +3,10 @@
 :mod:`dataflake.ldapconnection.connection`
 --------------------------------------------
 
+.. note:: On
+  `ReadTheDocs <http://http://dataflakeldapconnection.readthedocs.io>`_
+  this page will not work correctly.
+
 .. module:: dataflake.ldapconnection.connection
 
 .. autoclass:: LDAPConnection
