@@ -27,6 +27,6 @@ Glossary
     Python.  `virtualenv <http://pypi.python.org/pypi/virtualenv>`_
     was created by Ian Bicking.
 
-  python-ldap
-    The `python-ldap <http://python-ldap.sourceforge.net>`_ library is 
+  pyldap
+    The `pyldap <https://github.com/pyldap/pyldap/>`_ library is 
     used to communicate with LDAP servers.
