@@ -4,6 +4,7 @@ Change log
 2.0 (unreleased)
 ----------------
 - Python 3 compatibility
+- Move from ``python-ldap`` to ``pyldap`` for Python 3 compatibility
 - PEP 8 code cleanup
 - added Travis CI automatic testing configuration
 - use pkgutil-style namespace declaration
